package com.pluralsight.models;

/*
      The interface will be used for anything worth money
 */

public interface Valuable {

    double getValue();

    String getDescription();

}